--- a/install_modules.yaml
+++ b/install_modules.yaml
@@ -1,5 +1,5 @@
 ---
-- hosts: kubernetes
+- hosts: database
   become: true
   vars_files:
   - secret
@@ -8,7 +8,7 @@
     pip:
       name: "{{ item.name }}"
       version: "{{ item.version }}"
-      state: absent
+      state: present
     with_items:
       - { name: docker, version: 2.0.0 }
   - name: ensure docker is started
