--- a/install_modules.yaml
+++ b/install_modules.yaml
@@ -5,6 +5,7 @@
   - name: Install python pip
     yum:
       name: python-pip
+      update_cache: yes
       state: present
   - name: install certain python modules for docker
     pip:
