--- a/install_modules.yaml
+++ b/install_modules.yaml
@@ -24,7 +24,7 @@
       - { name: docker, version: 2.0.0 }
   - name: ensure mysql is started
     service:
-      name: mysqld
+      name: mariadb
       state: started
     notify:
     - start mysql
@@ -41,5 +41,5 @@
       state: restarted
   - name: start mysql
     ansible.builtin.service:
-      name: mysqld
+      name: mariadb
       state: restarted
