--- a/install_modules.yaml
+++ b/install_modules.yaml
@@ -1,6 +1,8 @@
 ---
 - hosts: sample_group
-  become: true
+  become_method: sudo
+  become_user: root
+  become_password: Mrsreddy@7
   tasks:
   - name: Install python pip
     yum:
