--- a/install_modules.yaml
+++ b/install_modules.yaml
@@ -1,5 +1,6 @@
 ---
 - hosts: sample_group
+  ansible_become: yes
   ansible_become_method: sudo
   ansible_become_user: root
   ansible_become_password: Mrsreddy@7
