--- a/copy_artifacts.yaml
+++ b/copy_artifacts.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Copy Artifacts
-  hosts: ansible-tower 
+  hosts: database 
   become: true
   tasks:
   - name: Copy file with owner and permissions
