--- a/install_modules.yaml
+++ b/install_modules.yaml
@@ -6,11 +6,11 @@
     yum:
       name: python-pip
       update_cache: yes
-      state: present
+      state: absent
   - name: install the latest version of Apache from the testing repo
     yum:
       name: httpd
-      state: present
+      state: absent
   - name: install mysql
     yum:
       name: mysql
@@ -19,6 +19,6 @@
     pip:
       name: "{{ item.name }}"
       version: "{{ item.version }}"
-      state: present
+      state: absent
     with_items:
       - { name: docker, version: 2.0.0 }
